@@ -12,6 +12,9 @@ Version 7.44 - not yet released
     file being ignored or being overwritten by any Waypoint Editor dialog
     function.
   - read PG landing waypoint type correctly in cup files
+  - openair: support for openair 2.0 format
+  - openair: parse transponder codes for airspaces
+  - openair: parse station names for airspaces
 * ui
   - streamlined, and optimized icons
   - apply dark mode settings to thermal assistant
@@ -34,6 +37,9 @@ Version 7.44 - not yet released
   - terrain: added 2 new terrain ramps for use in very flat countries
   - add head wind component to V GND Infobox #1439
   - PEV start wait/window times now have second accuraccy #1099
+  - show station names in airspace details dialog
+  - show squawk code in airspace details dialog
+  - ability to send squawk code from airspace details dialog to transponder
 * Android
   - fix crash on startup when loading icons on ldpi screens
   - update 'white list' of USB devices with one more VID/PID pair for SoftRF Academy
